--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
+    "motion": "^12.4.1",
     "next": "15.1.3",
     "postcss": "8.4.49",
     "react": "19.0.0",
